2004-09-14  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Make kerberos detection actually work
	
	* modules/ftp-method.c: (try_kerberos), (ftp_connection_create):
	Fail before requesting a password if we can't even
	connect to the ftp site.

2004-09-13  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump.

=== gnome-vfs 2.8.0 ===

2004-09-13  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	* configure.in:
	Update for 2.8.0

2004-09-13  Alexander Larsson  <alexl@redhat.com>

	* modules/Makefile.am:
	Properly dist both http methods.
	Patch from Rodney Dawes

2004-09-10  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info.c: (gnome_vfs_mime_get_value):
	Hack to make description for folders work.

2004-09-08  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-xfer.c: (move_items), (link_items):
	Make unique names work again.

2004-09-08  Alexander Larsson  <alexl@redhat.com>

	* libgnomevfs/gnome-vfs-mime-info.c: (gnome_vfs_mime_get_value),
	(gnome_vfs_mime_type_is_known):
	Implement type_is_known and can_be_executable.

2004-09-07  Christian Kellner  <gicmo@gnome-de.org>

	* modules/http-neon-method.c: (http_transfer_start_read),
	(do_read): Fix a bad cast and handle io errors during 
	ne_read_response_block so we will not call ne_end_request
	anymore because that will crash neon! This should
	fix #150780.

2004-09-07  Christian Kellner  <gicmo@gnome-de.org>

	* imported/neon/ne_utils.c (ne_parse_statusline): Workaround
	ShoutCast and IceCast servers not responding with "HTTP" but
	"ICY". This should fix bug #151453.

2004-09-07  Christian Kellner  <gicmo@gnome-de.org>

	* libgnomevfs/gnome-vfs-ssl.c: Fix build when neither
	OpenSSL nor GnuTLS is enabled. This should fix #151880.
	Thanks to Alex Fraser <alex@phatcore.com> for providing 
	the patch. 

2004-09-07  Ray Strode  <rstrode@redhat.com>

	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_get_default_component),