@@ -42,6 +42,7 @@ typedef struct _GnomeVFSVolumeMonitorClientClass GnomeVFSVolumeMonitorClientClas
 
 struct _GnomeVFSVolumeMonitorClient {
 	GnomeVFSVolumeMonitor parent;
+	gboolean is_shutdown;
 };
 
 struct _GnomeVFSVolumeMonitorClientClass {
@@ -51,6 +52,7 @@ struct _GnomeVFSVolumeMonitorClientClass {
 GType gnome_vfs_volume_monitor_client_get_type (void) G_GNUC_CONST;
 
 void _gnome_vfs_volume_monitor_client_daemon_died (GnomeVFSVolumeMonitorClient *volume_monitor_client);
+void _gnome_vfs_volume_monitor_client_shutdown (GnomeVFSVolumeMonitorClient *volume_monitor_client);
 
 G_END_DECLS
 
