@@ -1,5 +1,12 @@
 2004-09-14  Alexander Larsson  <alexl@redhat.com>
 
+	* libgnomevfs/gnome-vfs-volume-monitor-client.c:
+	* libgnomevfs/gnome-vfs-volume-monitor-client.h:
+	* libgnomevfs/gnome-vfs-volume-monitor.c:
+	Allow unreffing the volume monitor after shutdown.
+
+2004-09-14  Alexander Larsson  <alexl@redhat.com>
+
 	* configure.in:
 	Make kerberos detection actually work
 	
